# crud-gerenciamento-de-contatos

./: .env.example  README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  crud.py  database.py  models.py  router.py  schemas.py
frontend/: Dockerfile  app.py  styles.css
